--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,10 @@
 // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 // SOFTWARE.
-rootProject.name = 'now4j'
+rootProject.name = 'now4j-parent'
 
+include 'library'
+include 'cli'
+
+project(":library").name = "now4j"
+project(":cli").name = "now4j-cli"
