--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ cache:
 
 script:
     - echo "Travis branch is $TRAVIS_BRANCH, and is in pull request $TRAVIS_PULL_REQUEST"
-    - ./gradlew clean build javadoc fatJar --stacktrace
+    - ./gradlew clean build javadoc --stacktrace
 
 notifications:
   email:
