--- a/build.gradle
+++ b/build.gradle
@@ -34,13 +34,15 @@ buildscript {
     }
 }
 
+allprojects {
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
+}
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'com.jfrog.bintray'
     apply plugin: 'com.github.dcendents.android-maven'
-
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
 
     repositories {
         mavenCentral()
