--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ import org.slf4j.LoggerFactory
 
 Logger logger = LoggerFactory.getLogger('now4j-parent')
 
+def artifactGroupId = 'org.rm3l'
+def artifactVersion = '1.0.0-rc2'
+
 buildscript {
     repositories {
         jcenter()
@@ -35,8 +38,8 @@ buildscript {
 }
 
 subprojects {
-    group 'org.rm3l'
-    version '1.0.0-rc2'
+    group artifactGroupId
+    version artifactVersion
 
     apply plugin: 'java'
     apply plugin: 'com.jfrog.bintray'
@@ -102,15 +105,15 @@ ext.getBintrayConfig = {
 
             pkg {
                 repo = 'maven'
-                name = "org.rm3l:${artifactId}"
+                name = "${artifactGroupId}:${artifactId}"
                 labels = artifactLabels
 
                 //noinspection GroovyAssignabilityCheck
                 version {
-                    name = '1.0.0-rc2'
+                    name = artifactVersion
                     desc = description
                     released = new Date()
-                    vcsTag = '1.0.0-rc2'
+                    vcsTag = artifactVersion
                 }
 
                 publicDownloadNumbers = true
